# WeatherAppFinalProject

./: README.md  pyproject.toml
csv_file/: sibiu_data2_weather.csv
src/: main.py  weather_app_gui.py  weather_data.py
